Create new Maven module to support HTTP Apache Client